Additional information sent to the API.